--- a/project.html
+++ b/project.html
@@ -150,7 +150,7 @@
 			<h3>Link Pendaftaran</h3>
 			<a href="https://docs.google.com/forms/d/e/1FAIpQLSf-0rZS0F0aI6QbXzyw3IrQEnUCF-MMb6my-dTavk_Bwrg9xg/viewform" alt="Klik Daftar Sekarang">
 				<div class="gambar-Poster" id="Link">
-				<img src="img/poster.jpg" >
+				<img src="img/Poster.jpg" >
 				<p><b> KLIK DAFTAR SEKARANG</b> </p>
 			</div>
 				</div>
